--- a/sysapps/realsense/sceneperception_test.html
+++ b/sysapps/realsense/sceneperception_test.html
@@ -5,6 +5,7 @@
   <body>
     <p id='quality'>Quality: </p>
 	<p id='accuracy'>Accuracy: </p>
+	<p id='pose'>Pose: </p>
 	<div>
 		<button id='start'>Start</button>
 		<button id='reset'>Reset</button>
@@ -14,9 +15,10 @@
   <script>
     var qualityElement = document.getElementById('quality');
 	var accuracyElement = document.getElementById('accuracy');
+	var poseElement = document.getElementById('pose');
 	var startButton = document.getElementById('start');
 	var resetButton = document.getElementById('reset');
-	var stopButton = document.getElementById('stop'); 
+	var stopButton = document.getElementById('stop');
 	
 	var sp = new xwalk.experimental.realsense.ScenePerception();
 	sp.ontracking = function(e) {
@@ -25,6 +27,8 @@
 		if (quality >= 0.5) {
 			qualityElement.innerHTML = 'Quality: ' + 'good';
 			accuracyElement.innerHTML = 'Accuracy: ' + e.data.accuracy;
+			pose = e.data.pose;
+			poseElement.innerHTML = 'Pose: ' + pose[0] + ', ' + pose[1] + ', ' + pose[2]; 
 		} else {
 			qualityElement.innerHTML = 'Quality: ' + 'bad';
 		}
@@ -39,9 +43,12 @@
 	});
 	
 	stopButton.addEventListener('click', function(e) {
-		sp.stop().then(function(e) {console.log(e);});
-		qualityElement.innerHTML = 'Quality: ';
-		accuracyElement.innerHTML = 'Accuracy: ';
+		sp.stop().then(function(e) {
+			console.log(e);
+		    qualityElement.innerHTML = 'Quality: ';
+			accuracyElement.innerHTML = 'Accuracy: ';
+			poseElement.innerHTML = 'Pose: ';});
+		
 	});
   </script>
 </html>
