--- a/sysapps/realsense/sceneperception_test.html
+++ b/sysapps/realsense/sceneperception_test.html
@@ -7,8 +7,12 @@
 	<p id='accuracy'>Accuracy: </p>
 	<div style='margin-bottom:23px;'>
 		<button id='start'>Start</button>
-		<button id='reset'>Reset</button>
 		<button id='stop'>Stop</button>
+		<button id='reset'>Reset</button>
+		<button id='enableTracking'>Enable Tracking</button>
+		<button id='disableTracking'>Disable Tracking</button>
+		<button id='enableMeshing'>Enable Meshing</button>
+		<button id='disableMeshing'>Disable Meshing</button>
 	</div>
 	<div id='canvas'>
 	</div>
@@ -22,43 +26,64 @@
 	var startButton = document.getElementById('start');
 	var resetButton = document.getElementById('reset');
 	var stopButton = document.getElementById('stop');
+	var enableTrackingButton = document.getElementById('enableTracking');
+	var disableTrackingButton = document.getElementById('disableTracking');
+	var enableMeshingButton = document.getElementById('enableMeshing');
+	var disableMeshingButton = document.getElementById('disableMeshing');
 	
 	var sp = new xwalk.experimental.realsense.ScenePerception();
-	sp.ontracking = function(e) {
+	sp.onchecking = function(e) {
 		var quality = e.data.quality;
 		qualityElement.innerHTML = 'Quality: ' + quality.toFixed(2);
-		if (quality >= 0.5) {
-			qualityElement.innerHTML = 'Quality: ' + 'good';
-			accuracyElement.innerHTML = 'Accuracy: ' + e.data.accuracy;
-			updateCameraPose(e.data.pose);
-			updateMeshes(e.data.meshes);
-		} else {
-			qualityElement.innerHTML = 'Quality: ' + 'bad';
-		}
+	};
+
+	sp.ontracking = function(e) {
+		accuracyElement.innerHTML = 'Accuracy: ' + e.data.accuracy;
+		if (e.data.accuracy == 'low' || e.data.accuracy == 'failed')
+			return;
+		updateCameraPose(e.data.cameraPose);
 	};
 	
 	var meshesCreated = false;
 	
-	startButton.addEventListener('click', function(e) {
+	startButton.onclick = function(e) {
 		sp.start().then(function(e) {console.log(e);});
-	});
+	};
 	
-	resetButton.addEventListener('click', function(e) {
+	resetButton.onclick = function(e) {
 		meshesCreated = false;
 		sp.reset().then(function(e) {console.log(e);});
-	});
+	};
 	
-	stopButton.addEventListener('click', function(e) {
+	stopButton.onclick = function(e) {
 		sp.stop().then(function(e) {
 			console.log(e);
-		    qualityElement.innerHTML = 'Quality: ';
-			accuracyElement.innerHTML = 'Accuracy: ';});
-		
-	});
+			qualityElement.innerHTML = 'Quality: ';
+		});	
+	};
+	
+	enableTrackingButton.onclick = function(e) {
+		sp.enableTracking().then(function(e) {console.log(e);});
+	};
+	
+	disableTrackingButton.onclick = function(e) {
+		sp.disableTracking().then(function(e) {
+			console.log(e);
+			accuracyElement.innerHTML = 'Accuracy: ';
+		});
+	};
+	
+	enableMeshingButton.onclick = function(e) {
+		sp.enableMeshing().then(function(e) {console.log(e);});
+	};
+	
+	disableMeshingButton.onclick = function(e) {
+		sp.disableMeshing().then(function(e) {console.log(e);});
+	};
 	
 	var renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setClearColor(0xffffff, 1);
-    renderer.setSize(800, 600);
+    renderer.setSize(640, 480);
     document.getElementById("canvas").appendChild(renderer.domElement);
 	
 	var stats = new Stats();
@@ -67,23 +92,23 @@
 	stats.domElement.style.right = '0px';
 	document.getElementById("canvas").appendChild(stats.domElement);
 	
-	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 500);
-    camera.position.set(0, 0, 100);
+	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.01, 1000);
+    camera.position.set(0, 0, -3);
     camera.lookAt(new THREE.Vector3(0, 0, 0));
     var scene = new THREE.Scene();
 	
 	var controls = new THREE.TrackballControls(camera);
 
 	var x_material = new THREE.LineBasicMaterial({
-        color: 0xff0000, linewidth: 4
+        color: new THREE.Color(1, 0, 0), linewidth: 4
     });
 	
 	var y_material = new THREE.LineBasicMaterial({
-        color: 0x00ff00, linewidth: 4
+        color: new THREE.Color(0, 1, 0), linewidth: 4
     });
 	
 	var z_material = new THREE.LineBasicMaterial({
-        color: 0x0000ff, linewidth: 4
+        color: new THREE.Color(0, 0, 1), linewidth: 4
     });
 	
 	var x_geometry = new THREE.Geometry();
@@ -131,19 +156,16 @@
 		var cameraXAxis = new THREE.Vector4(0, 0, 0, 0);
 		var xVect = new THREE.Vector4(0.16, 0.0, 0.0, 1.0);
 		poseMultiplyVect(cameraXAxis, cameraPose, xVect);
-		cameraXAxis.multiplyScalar(100);
 		var cameraYAxis = new THREE.Vector4(0, 0, 0, 0);
 		var yVect = new THREE.Vector4(0.0, 0.16, 0.0, 1.0);
 		poseMultiplyVect(cameraYAxis, cameraPose, yVect);
-		cameraYAxis.multiplyScalar(100);
 		var cameraZAxis = new THREE.Vector4(0, 0, 0, 0);
 		var zVect = new THREE.Vector4(0.0, 0.0, 0.16, 1.0);
 		poseMultiplyVect(cameraZAxis, cameraPose, zVect);
-		cameraZAxis.multiplyScalar(100);
 		
 		z_axis.geometry.dynamic = true;
 		z_axis.geometry.vertices[0] = cameraCenter;
-		z_axis.geometry.vertices[1] = new THREE.Vector3(-cameraZAxis.x, -cameraZAxis.y, -cameraZAxis.z);
+		z_axis.geometry.vertices[1] = new THREE.Vector3(cameraZAxis.x, cameraZAxis.y, cameraZAxis.z);
 		z_axis.geometry.verticesNeedUpdate = true;
 		
 		y_axis.geometry.dynamic = true;
@@ -153,7 +175,7 @@
 		
 		x_axis.geometry.dynamic = true;
 		x_axis.geometry.vertices[0] = cameraCenter;
-		x_axis.geometry.vertices[1] = new THREE.Vector3(cameraXAxis.x, cameraXAxis.y, cameraXAxis.z);
+		x_axis.geometry.vertices[1] = new THREE.Vector3(-cameraXAxis.x, -cameraXAxis.y, -cameraXAxis.z);
 		x_axis.geometry.verticesNeedUpdate = true;
 		
 		//console.log(cameraCenter.x, cameraCenter.y, cameraCenter.z);
